engelskprosjekt/englesk.css
html, body{
    height: 100%;
    margin: 0;
    padding: 0;
}

.item1{ grid-area: header; }
.item2{ grid-area: meny;}
.item3{ grid-area: main;}

.grid-container {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto auto auto;
    grid-template-areas:
        'header'
        'meny'
        'main'
}

.anton-regular {
    font-family: "Anton", sans-serif;
    font-weight: 400;
    font-style: normal;
    color: red;
    font-size: 4.5rem;
}

.roboto-regular {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    font-style: normal;
}

.grid-container > div {
    font-size: 1.5rem;
    padding: 1rem;
}

.item1 {
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: top;
    height: 400px;
    background-image: url(../bilder/london.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-color: rgb(207, 12, 12) ;
}

.item2 {
    background-color:red;
    border-bottom: 5px solid;
}

.boks{ /*Cointainer box for the different pages*/
    background-color: rgba(152, 152, 152, 0.504);
    width: 400px;
    padding: 1rem;
    margin: 10px;
    border: 3px solid black;
    border-radius: 10px;
    margin-left: auto; /*Fixes it not beeing centered in the locations tab*/
    margin-right: auto;/*Fixes it not beeing centered in the locations tab*/
}

.storboks{ /*Cointainer box for the Video in the locations tab*/
    background-color: rgba(152, 152, 152, 0.504);
    width: 800px;
    padding: 1rem;
    margin: 10px;
    border: 3px solid black;
    border-radius: 10px;
}

nav ul{
    list-style: none;
    display: flex;
    flex-direction: row;
    justify-content: center;
    margin-top: auto;
    margin-bottom: auto;
}

nav ul li a{
    display: flex;
    text-decoration: none;
    color:white;
    padding:1.5rem;
    display: block;
    font-size: 2rem;

}

nav ul li a:hover{
    background-color:rgb(207, 10, 10);
}

.item3 {
    display: flex;
    justify-content: center;
    text-align: center;
}

main h1 {
    background-color: rgb(39, 39, 39);
    color: white;
}
svg { /*Adujusting where the icons are*/
    padding-top: 70px;
}

@media screen and (max-width: 800px) {
    nav ul li a { /*Makes the navigation bar not go off-screen when you are on mobile*/
        font-size: 0.950rem;
    }
    
    .storboks{ /*Makes the box fit on a mobile device*/
        width: 400px;
        margin: 0;
    }

    .item3 .storboks video{ /*Makes the vid fit on a mobile device*/
        width: 400px;
    }
}

